yamls/03-dep.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: httpd-frontend
spec:
  template:
    metadata:
      name: httpd-pod
      labels:
        app: frontend
    spec:
      containers:
        - name: httpd-container
          image: httpd
  replicas: 3
  selector:
    matchLabels:
      app: frontend
