yamls/04-cmd-args.yaml
apiVersion: v1
kind: Pod
metadata:
  creationTimestamp: null
  labels:
    run: my-ubuntu
  name: my-ubuntu
spec:
  containers:
    - image: ubuntu
      name: my-ubuntu
      command:
        - "ls"
      args:
        - "-lrt"
