yamls/05-env-cm-secret.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: my-apache
  name: my-apache
spec:
  replicas: 1
  selector:
    matchLabels:
      app: my-apache
  template:
    metadata:
      labels:
        app: my-apache
    spec:
      containers:
        - image: httpd
          name: httpd
          volumeMounts:
            - name: config-volume
              mountPath: /opc
      volumes:
        - name: config-volume
          configMap:
            name: app-config-from-file
