yamls/06-security-context.yaml
apiVersion: v1
kind: Pod
metadata:
  name: ubuntu-sleeper
spec:
  containers:
    - command:
        - sleep
        - "4800"
      image: ubuntu
      securityContext:
        runAsUser: 1010
        capabilities:
          add: ["SYS_TIME"]
      imagePullPolicy: Always
      name: ubuntu
