yamls/07-resource.yaml
apiVersion: v1
kind: Pod
metadata:
  name: httpd
spec:
  containers:
    - image: httpd
      imagePullPolicy: Always
      name: httpd
      resources:
        requests:
          cpu: "250m"
          memory: "100Mi"
        limits:
          cpu: "250m"
          memory: "500Mi"
