yamls/09-taint-tol.yaml
apiVersion: v1
kind: Pod
metadata:
  creationTimestamp: null
  labels:
    run: mosquito
  name: mosquito
spec:
  containers:
    - image: nginx
      name: bee
  tolerations:
    - key: "spray"
      value: "mortein"
      operator: "Equal"
      effect: "NoSchedule"
