yamls/12-sidecar.yaml
apiVersion: v1
kind: Pod
metadata:
  name: red
  namespace: default
spec:
  containers:
    - command:
        - sh
        - -c
        - echo The app is running! && sleep 3600
      image: busybox:1.28
      name: red-container
    - image: busybox
      name: sidecar
      command:
        - sh
        - -c
        - echo The app is running! && sleep 3600
