yamls/16-init-containers.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: apache-init-volume-example
spec:
  replicas: 1
  selector:
    matchLabels:
      app: apache
  template:
    metadata:
      labels:
        app: apache
    spec:
      containers:
        - image: httpd
          name: test-apache
          volumeMounts:
            - mountPath: /usr/local/apache2/htdocs
              name: src-volume
      volumes:
        - name: src-volume
          emptyDir: {}
