yamls/17-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: simple-webapp-deployment
spec:
  ports:
    - port: 8080
      protocol: TCP
      targetPort: 8080
      nodePort: 30001
  selector:
    name: simple-webapp
  type: NodePort
